--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="container">
 
             <h1 class="banner_highlight">
-                Your cat deserves the best, and so we are
+                Your cat deserve the best, and so we are
             </h1>
 
             <h3 class="banner_text">
