Add - Adopt section and Login/Signup section

--- a/adopt.html
+++ b/adopt.html
@@ -34,7 +34,6 @@
                     <a href="#contact">Contato</a>
                     <a href="adopt.html" class="blue">Adotar</a>
                     <a href="login.html">Entrar</a>
-                    <a href="signup.html">Registrar</a>
 
                 </div>
 
@@ -49,6 +48,79 @@
     <div class="header_space"></div>
 
 
+    <!-- Section adoção  -->
+
+    <div class="light_section">
+
+        <div class="container">
+
+            <div class="adoption">
+
+                <h1>Encontre aqui o seu novo pet</h1>
+
+                <div class="boxes">
+
+                    <div class="box">
+                        <img src="img/jack.jpg" alt="Imagem de Jack, gato de 2 meses, de São Paulo - SP">
+
+                        <h2>Jack</h2>
+
+                        <p>
+                            São Paulo - SP <br>
+                            Macho - 2 Meses
+                        </p>
+
+                        <div class="options">
+
+                            <a href="login.html">Ver mais</a>
+                            <a href="login.html">Chat</a>
+
+                        </div>
+                    </div>
+
+                    <div class="box">
+                        <img src="img/lua.jpg" alt="Imagem de Lua, cadela de 4 meses, de Belo Horizonte - MG">
+
+                        <h2>Lua</h2>
+
+                        <p>
+                            Belo Horizonte - MG <br>
+                            Fêmea - 4 meses
+                        </p>
+
+                        <div class="options">
+
+                            <a href="login.html">Ver mais</a>
+                            <a href="login.html">Chat</a>
+
+                        </div>
+                    </div>
+
+                    <div class="box">
+                        <img src="img/dudu.jpg" alt="Imagem de Dudu, cachorro de 3 meses, do Rio de Janeiro - RJ">
+
+                        <h2>Dudu</h2>
+
+                        <p>
+                            Rio de Janeiro - RJ <br>
+                            Macho - 3 meses 
+                        </p>
+
+                        <div class="options">
+
+                            <a href="login.html">Ver mais</a>
+                            <a href="login.html">Chat</a>
+
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
 
     <!-- Footer -->
 
@@ -64,28 +136,28 @@
 
                 <div class="contact" id="contact">
 
-                    <a href="https://www.linkedin.com/in/daniel-pederzini-414353208/" target="_blank">
+                    <a href="https://www.linkedin.com/in/daniel-pederzini-414353208/" target="_LinkedIn">
 
                         <img src="img/linkedin.png" alt="ícone LinkedIn">
                         <span>LinkedIn</span>
 
                     </a>
 
-                    <a href="https://github.com/danielpederzini" target="_blank">
+                    <a href="https://github.com/danielpederzini" target="_GitHub">
 
                         <img src="img/github.png" alt="ícone GitHub">
                         <span>GitHub</span>
 
                     </a>
 
-                    <a href="https://www.instagram.com/danpdz/" target="_blank">
+                    <a href="https://www.instagram.com/danpdz/" target="_Instagram">
 
                         <img src="img/instagram.png" alt="Ícone Instagram">
                         <span>Instagram</span>
 
                     </a>
 
-                    <a href="mailto:pederzinidaniel@hotmail.com" target="_blank">
+                    <a href="mailto:pederzinidaniel@hotmail.com" target="_Outlook">
 
                         <img src="img/outlook.png" alt="Ícone Outlook">
                         <span>E-mail</span>
