--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
                     <a href="#contact">Contato</a>
                     <a href="adopt.html">Adotar</a>
                     <a href="login.html">Entrar</a>
-                    <a href="signup.html">Registrar</a>
 
                 </div>
 
@@ -70,9 +69,9 @@
 
 
 
-    <!-- Section about -->
+    <!-- Section sobre - Missão visão valores -->
 
-    <div class="section">
+    <div class="dark_section">
 
         <div class="container">
 
@@ -84,7 +83,7 @@
 
                         <img src="img/goal.png" alt="Ícone de missão">
 
-                        <h1>Missão</h1>
+                        <h2>Missão</h2>
 
                         <p>
                             Utilizar a tecnologia como ferramenta para
@@ -98,13 +97,12 @@
 
                         <img src="img/vision.png" alt="Ícone de visão">
 
-                        <h1>Visão</h1>
+                        <h2>Visão</h2>
 
                         <p>
-                            O mundo está cheio de pessoas ruins, mas
-                            acreditamos que a bondade ainda existe. É
-                            por isso que unimos forças para tornar o nosso
-                            planeta um lugar melhor, para nós e para os
+                            Acreditamos que ainda existem muitas pessoas boas 
+                            no mundo. É por isso que unimos forças para tornar 
+                            o nosso planeta um lugar melhor, para nós e para os
                             animais
                         </p>
 
@@ -114,14 +112,14 @@
 
                         <img src="img/values.png" alt="Ícone de valores">
 
-                        <h1>Valores</h1>
+                        <h2>Valores</h2>
 
                         <p>
                             Amor, respeito, união, empatia, bondade,
                             iniciativa, confiança e...
                         </p>
 
-                        <span>Fazer a diferença</span>
+                        <b><p>Fazer a diferença</p></b>
 
                     </div>
 
@@ -129,47 +127,43 @@
 
             </div>
 
+        </div>
 
+    </div>
+
+    
+    <!-- Section sobre - O que fazer aqui -->
+
+    <div class="light_section">
+
+        <div class="container">
 
             <div class="solution">
 
-                <h1>Como tudo funciona</h1>
+                <h1>O que fazer aqui?</h1>
 
                 <div class="boxes">
 
                     <div class="box">
-                        <img src="img/devices.png" alt="Celular e laptop no site PetLink">
-                        <p>
-                            Crie uma conta e faça login gratuitamente
-                            no nosso site
-                        </p>
-                    </div>
-
-                    <div class="box">
                         <img src="img/pets.png" alt="Gato e cachorro felizes">
                         <p>
-                            PetShops, pessoas e centros de adoção 
-                            publicam aqui informações sobre seus pets que ainda 
-                            não têm um lar
+                            PetShops, pessoas e centros de adoção publicam aqui 
+                            informações sobre seus pets que ainda não têm um lar
                         </p>
                     </div>
 
                     <div class="box">
                         <img src="img/posts.png" alt="Exemplos de posts de adoção">
                         <p>
-                            Navegue pelos posts de acordo com sua 
-                            preferência, ou crie o seu próprio
+                            Crie uma conta em nosso site e acesse a página "Adotar"
+                            para navegar pelos posts ou criar o seu próprio
                         </p>
                     </div>
-
-                </div>
-
-                <div class="boxes2">
 
                     <div class="box">
                         <img src="img/chat.png" alt="Celular e laptop no site PetLink">
                         <p>
-                            Caso se interessar por algum pet, 
+                            Caso se interessar por algum pet,
                             você pode conversar com o dono do post
                             na aba de chat
                         </p>
@@ -178,7 +172,7 @@
                     <div class="box">
                         <img src="img/love_animal.png" alt="Celular e laptop no site PetLink">
                         <p>
-                            Quando tudo estiver decidido, basta 
+                            Quando tudo estiver decidido, basta
                             confirmar a adoção e receber o seu
                             novo amigo!
                         </p>
@@ -208,28 +202,28 @@
 
                 <div class="contact" id="contact">
 
-                    <a href="https://www.linkedin.com/in/daniel-pederzini-414353208/" target="_blank">
+                    <a href="https://www.linkedin.com/in/daniel-pederzini-414353208/" target="_LinkedIn">
 
                         <img src="img/linkedin.png" alt="ícone LinkedIn">
                         <span>LinkedIn</span>
 
                     </a>
 
-                    <a href="https://github.com/danielpederzini" target="_blank">
+                    <a href="https://github.com/danielpederzini" target="_GitHub">
 
                         <img src="img/github.png" alt="ícone GitHub">
                         <span>GitHub</span>
 
                     </a>
 
-                    <a href="https://www.instagram.com/danpdz/" target="_blank">
+                    <a href="https://www.instagram.com/danpdz/" target="_Instagram">
 
                         <img src="img/instagram.png" alt="Ícone Instagram">
                         <span>Instagram</span>
 
                     </a>
 
-                    <a href="mailto:pederzinidaniel@hotmail.com" target="_blank">
+                    <a href="mailto:pederzinidaniel@hotmail.com" target="_Outlook">
 
                         <img src="img/outlook.png" alt="Ícone Outlook">
                         <span>E-mail</span>
