--- a/login.html
+++ b/login.html
@@ -34,7 +34,6 @@
                     <a href="#contact">Contato</a>
                     <a href="adopt.html">Adotar</a>
                     <a href="login.html" class="blue">Entrar</a>
-                    <a href="signup.html">Registrar</a>
 
                 </div>
 
@@ -49,6 +48,72 @@
     <div class="header_space"></div>
 
 
+    <!-- Sessão de login -->
+
+    <div class="light_section">
+
+        <div class="container">
+
+            <div class="access">
+
+                <!-- Caixa de login -->
+
+                <div class="box">
+
+                    <h1>Acessar</h1>
+
+                    <div class="inputs">
+
+                        <p>Nome de usuário ou email</p>
+                        <input type="email">
+
+
+                        <p>Senha</p>
+                        <input type="password">
+
+                    </div>
+
+                    <button>Entrar</button>
+
+                    <br>
+
+                    <a href="">Esqueceu sua senha?</a>
+
+                </div>
+
+                <!-- Caixa de cadastro -->
+
+                <div class="box">
+
+                    <h1>Criar uma conta</h1>
+
+                    <div class="inputs">
+
+                        <p>Nome de usuário</p>
+                        <input type="text">
+
+                        <p>Email</p>
+                        <input type="email">
+
+
+                        <p>Senha</p>
+                        <input type="password">
+
+
+                        <p>Confirme sua senha</p>
+                        <input type="password">
+
+                    </div>
+
+                    <button>Criar conta</button>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
 
     <!-- Footer -->
 
@@ -64,28 +129,28 @@
 
                 <div class="contact" id="contact">
 
-                    <a href="https://www.linkedin.com/in/daniel-pederzini-414353208/" target="_blank">
+                    <a href="https://www.linkedin.com/in/daniel-pederzini-414353208/" target="_LinkedIn">
 
                         <img src="img/linkedin.png" alt="ícone LinkedIn">
                         <span>LinkedIn</span>
 
                     </a>
 
-                    <a href="https://github.com/danielpederzini" target="_blank">
+                    <a href="https://github.com/danielpederzini" target="_GitHub">
 
                         <img src="img/github.png" alt="ícone GitHub">
                         <span>GitHub</span>
 
                     </a>
 
-                    <a href="https://www.instagram.com/danpdz/" target="_blank">
+                    <a href="https://www.instagram.com/danpdz/" target="_Instagram">
 
                         <img src="img/instagram.png" alt="Ícone Instagram">
                         <span>Instagram</span>
 
                     </a>
 
-                    <a href="mailto:pederzinidaniel@hotmail.com" target="_blank">
+                    <a href="mailto:pederzinidaniel@hotmail.com" target="_Outlook">
 
                         <img src="img/outlook.png" alt="Ícone Outlook">
                         <span>E-mail</span>
