Add - flex-flow: row wrap

--- a/adopt.html
+++ b/adopt.html
@@ -33,6 +33,7 @@
                     <a href="index.html#about">Sobre</a>
                     <a href="#contact">Contato</a>
                     <a href="adopt.html" class="blue">Adotar</a>
+                    <a href="login.html">Perfil</a>
                     <a href="login.html">Entrar</a>
 
                 </div>
