--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     <a href="#about">Sobre</a>
                     <a href="#contact">Contato</a>
                     <a href="adopt.html">Adotar</a>
+                    <a href="login.html">Perfil</a>
                     <a href="login.html">Entrar</a>
 
                 </div>
@@ -43,10 +44,11 @@
 
     </div>
 
-    <!-- Espaço para o header não cobrir a imagem -->
+
+    <!-- Como o header é fixo, há um espaço atrás dele 
+        para que ele não cubra o conteúdo -->
 
     <div class="header_space"></div>
-
 
 
     <!-- Banner -->
@@ -100,8 +102,8 @@
                         <h2>Visão</h2>
 
                         <p>
-                            Acreditamos que ainda existem muitas pessoas boas 
-                            no mundo. É por isso que unimos forças para tornar 
+                            Acreditamos que ainda existem muitas pessoas boas
+                            no mundo. É por isso que unimos forças para tornar
                             o nosso planeta um lugar melhor, para nós e para os
                             animais
                         </p>
@@ -119,7 +121,9 @@
                             iniciativa, confiança e...
                         </p>
 
-                        <b><p>Fazer a diferença</p></b>
+                        <b>
+                            <p>Fazer a diferença</p>
+                        </b>
 
                     </div>
 
@@ -131,7 +135,7 @@
 
     </div>
 
-    
+
     <!-- Section sobre - O que fazer aqui -->
 
     <div class="light_section">
@@ -147,7 +151,7 @@
                     <div class="box">
                         <img src="img/pets.png" alt="Gato e cachorro felizes">
                         <p>
-                            PetShops, pessoas e centros de adoção publicam aqui 
+                            PetShops, pessoas e centros de adoção publicam aqui
                             informações sobre seus pets que ainda não têm um lar
                         </p>
                     </div>
