--- a/login.html
+++ b/login.html
@@ -33,6 +33,7 @@
                     <a href="index.html#about">Sobre</a>
                     <a href="#contact">Contato</a>
                     <a href="adopt.html">Adotar</a>
+                    <a href="login.html">Perfil</a>
                     <a href="login.html" class="blue">Entrar</a>
 
                 </div>
@@ -64,24 +65,19 @@
 
                         <h1>Acessar</h1>
 
-                        <div class="inputs">
+                        <div class="inserts">
 
-                            <p>Nome de usuário ou E-mail</p>
-                            <input type="email">
+                            <input type="email" placeholder="Usuário ou E-mail" autofocus>
 
+                            <br><br>
 
-                            <p>Senha</p>
-                            <input type="password">
+                            <input type="password" placeholder="Senha">
 
                         </div>
 
                         <button>Entrar</button>
 
-                        <br>
-
                         <a href="">Esqueceu sua senha?</a>
-
-                        <br>
 
                         <a href="#signup">Ainda não tem uma conta?</a>
 
@@ -97,20 +93,23 @@
 
                         <h1>Criar uma conta</h1>
 
-                        <div class="inputs">
+                        <div class="inserts">
 
-                            <p>Nome de usuário</p>
-                            <input type="text">
+                            <input type="text" placeholder="Nome de usuário">
 
-                            <p>E-mail</p>
-                            <input type="email">
+                            <input type="email" placeholder="E-mail">
 
-                            <p>Senha</p>
-                            <input type="password">
+                            <br><br>
 
+                            <input type="text" placeholder="Cidade">
 
-                            <p>Confirme sua senha</p>
-                            <input type="password">
+                            <input type="text" placeholder="Estado">
+
+                            <br><br>
+
+                            <input type="password" placeholder="Senha">
+
+                            <input type="password" placeholder="Confirme sua senha">
 
                         </div>
 
